@@ -8,6 +8,7 @@ What's New for FreeImage
 Month day, 2011 - 3.15.2
 ! FreeImage now uses LibRaw 0.14.3
 ! FreeImage now uses LibPNG 1.5.6
++ [Christian Heimes] added write support to the TIFF plugin for EXIF_MAIN tags
 + [Herve Drolon] added new Exif maker note tags
 * [Mylek Grey] enabled the use of multi-component transforms (MCT) in J2K and JP2 saving
 * [Herve Drolon] refactored PluginICO in order to correctly support Windows Vista 256x256 icons
